Fix ul style issue
The last element in the term list needed to have a bottom border
radius, but this messed up the other elements. This commit fixes
that.

--- a/styles/style.css
+++ b/styles/style.css
@@ -90,5 +90,8 @@ canvas
   cursor: pointer;
   font-weight: 500;
   background-color: #fff177;
+}
+.sent_ul > li:last-child
+{
   border-radius: 0px 0px 5px 5px;
 }
